2007-01-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: skel/INSTALL
	  Catch up.

2006-12-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm
	  text/ reversed arguments.

2006-12-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0 released.

	* Fix: src/kahua/config.scm.in
	  If -c conf-file or -S /path/to/site is specified, it's prior
	  to KAHUA_DEFAULT_SITE environment variable.

	* Fix: src/kahua-package
	  "generate" sub command now handle --creator=... and --mail=...
	  option properly.

2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: kahua.el.in
	  Add "kahua-site-bundle" custom variable for kahua-shell mode
	  and kahua-admin mode.

	* Remove: kahua-shell.el.in
	  Integrated to kahua.el.in.

2006-12-27  Katsutoshi Itoh <cut-sea@kahua.org>

	* Remove: skel/proj/auto-update-base.kahua,
	          skel/proj/debug-support.kahua
	          skel/proj/default.kahua
	          skel/proj/page.kahua
	          skel/proj/parts-collection.kahua
	          skel/proj/pcont-page.kahua
	          skel/proj/session.kahua
	          skel/proj/slot-acl-base.kahua
	          skel/proj/utility.kahua
	          skel/proj/validator.kahua
	* Change: skel/proj/proj.kahua
	  rewrite hello level simple code.
	* Change: src/kahua-package.scm
	  catch up skel's change.
	* Change: skel/test/test.scm.in
	          skel/templates/page.xml
	  modify sample code using page template file.
	* New: skel/MESSAGES
	  English Messages after install skelton project.
	* Change: at install Kahua mv old skel directory to skel.bak.
	* Fix: skel/INSTALL, skel/MESSAGES
	  modify typo :argument => :arguments.
	* Change: skel/proj/proj.kahua
	  modify message.
	
2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: doc/Scripts/*.txt
	  English documents.

2006-12-27  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: skel/configure.ac
	  remove nobsun@kahua.org literal email address.

2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Update: doc/Modules/kahua.test.worker.ja,