@@ -5,9 +5,4 @@ Please edit app-servers in the Kahua working directory to add
 
   (%%_PROJECT_NAME_%% :arguments () :run-by-default 0)
 
-If you want to allow non registered user to edit page, 
-give 'non-member-edit as a argument.
-
-  (%%_PROJECT_NAME_%% :arguments (non-member-edit) :run-by-default 0)
-
 ================================================================================
